--- a/src/css/cardlist.css
+++ b/src/css/cardlist.css
@@ -1,43 +1,53 @@
 .card-list {
-    position: relative;
     width: 100%;
     margin-top: 25px !important;
 }
 
-.card-list.col-1 > .card {
+.card-list > #static {
+    display: flex;
+    justify-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.card-list > #modal {
+    
+}
+
+.card-list.col-1 > #static > .card {
     width: calc(8.33% - 20px);
 }
-.card-list.col-2 > .card {
+.card-list.col-2 > #static > .card {
     width: calc(16.66% - 20px);
 }
-.card-list.col-3 > .card {
+.card-list.col-3 > #static > .card {
     width: calc(25% - 20px);
 }
-.card-list.col-4 > .card {
+.card-list.col-4 > #static > .card {
     width: calc(33.33% - 20px);
 }
-.card-list.col-5 > .card {
+.card-list.col-5 > #static > .card {
     width: calc(41.66% - 20px);
 }
-.card-list.col-6 > .card {
+.card-list.col-6 > #static > .card {
     width: calc(50% - 20px);
 }
-.card-list.col-7 > .card {
+.card-list.col-7 > #static > .card {
     width: calc(58.33% - 20px);
 }
-.card-list.col-8 > .card {
+.card-list.col-8 > #static > .card {
     width: calc(66.66% - 20px);
 }
-.card-list.col-9 > .card {
+.card-list.col-9 > #static > .card {
     width: calc(75% - 20px);
 }
-.card-list.col-10 > .card {
+.card-list.col-10 > #static > .card {
     width: calc(83.33% - 20px);
 }
-.card-list.col-11 > .card {
+.card-list.col-11 > #static > .card {
     width: calc(91.66% - 20px);
 }
-.card-list.col-12 > .card {
+.card-list.col-12 > #static > .card {
     width: calc(100% - 20px);
 }
 
